[gd_scene load_steps=17 format=2]

[ext_resource path="res://Escenas/Personajes/Randal_cabeza.tscn" type="PackedScene" id=1]
[ext_resource path="res://Recursos/Visuales/Sprites/Figuras/Cuadro.png" type="Texture" id=2]
[ext_resource path="res://Codigos/Locales/Habitats/Tutorial_Virus.gd" type="Script" id=3]
[ext_resource path="res://Recursos/Visuales/Interfaz/Flechita.png" type="Texture" id=4]
[ext_resource path="res://Recursos/Visuales/Interfaz/compartir.png" type="Texture" id=5]
[ext_resource path="res://Recursos/Visuales/Sprites/Figuras/Estrella.png" type="Texture" id=6]
[ext_resource path="res://Recursos/Visuales/Sprites/Cabezas/AtrasRandal.PNG" type="Texture" id=7]
[ext_resource path="res://Recursos/Visuales/Interfaz/bg_figuras.png" type="Texture" id=8]
[ext_resource path="res://Escenas/Objetos/Ventana_drag.tscn" type="PackedScene" id=9]
[ext_resource path="res://Recursos/Sonoros/Incidentales/clicBien.wav" type="AudioStream" id=10]
[ext_resource path="res://Escenas/Objetos/VirusWiki.tscn" type="PackedScene" id=11]
[ext_resource path="res://Escenas/Habitats/WikiGenerador.tscn" type="PackedScene" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 204.306

[sub_resource type="Animation" id=2]
resource_name = "arrastra"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3, 2.3, 3 ),
"transitions": PoolRealArray( 7.21, 0.637281, 0.225313, 1 ),
"update": 0,
"values": [ Vector2( 1853.07, 780.426 ), Vector2( 1037, 780.426 ), Vector2( 1037.01, 780.426 ), Vector2( 1853.07, 780.426 ) ]
}

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Recursos/Textos/Fuentes/DaxlinePro-Bold.otf"

[sub_resource type="DynamicFont" id=4]
size = 63
font_data = SubResource( 3 )

[node name="Tutorial_Virus" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 2560, 1440 )
mouse_filter = 2
color = Color( 0.160784, 0.0196078, 0.129412, 0.6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Randy" type="Node2D" parent="."]
position = Vector2( 523.847, 684.21 )

[node name="Randy_atras" type="Sprite" parent="Randy"]
texture = ExtResource( 7 )

[node name="Randy" parent="Randy" instance=ExtResource( 1 )]
position = Vector2( 0, 0 )

[node name="Compartir" type="Sprite" parent="Randy"]
position = Vector2( -110.471, 142.543 )
scale = Vector2( 0.290065, 0.290065 )
texture = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="Randy"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Randy/Area2D"]
shape = SubResource( 1 )

[node name="Wiki" parent="." instance=ExtResource( 11 )]
position = Vector2( 1699.83, 709.154 )
tutorial = true

[node name="Wiki2" parent="." instance=ExtResource( 11 )]
position = Vector2( 1749.72, 441.885 )
tutorial = true

[node name="Wiki3" parent="." instance=ExtResource( 11 )]
position = Vector2( 1899.39, 224.506 )
tutorial = true

[node name="Wiki4" parent="." instance=ExtResource( 11 )]
position = Vector2( 1749.72, 976.423 )
tutorial = true

[node name="Wiki5" parent="." instance=ExtResource( 11 )]
position = Vector2( 1881.58, 1200.93 )
tutorial = true

[node name="Wiki7" parent="." instance=ExtResource( 11 )]
position = Vector2( 2109.64, 1286.46 )
tutorial = true

[node name="Wiki6" parent="." instance=ExtResource( 11 )]
position = Vector2( 2127.46, 146.107 )
tutorial = true

[node name="Ventana_drag" parent="." instance=ExtResource( 9 )]
position = Vector2( 2106.08, 687.773 )
gravedad = false
area_tuto = true
valorFigura = 1

[node name="WikiGenerator" parent="." instance=ExtResource( 12 )]

[node name="Mano" type="Sprite" parent="."]
visible = false
position = Vector2( 1033.88, 780.426 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Mano"]
anims/arrastra = SubResource( 2 )

[node name="Contenedor_pp" type="Node2D" parent="."]
visible = false
position = Vector2( 1332.78, 317.159 )

[node name="Contenedor" type="Sprite" parent="Contenedor_pp"]
texture = ExtResource( 8 )

[node name="Cuadro" type="Sprite" parent="Contenedor_pp"]
position = Vector2( -209.999, -1.92658 )
scale = Vector2( 0.189806, 0.189806 )
texture = ExtResource( 2 )

[node name="Estrella" type="Sprite" parent="Contenedor_pp"]
position = Vector2( -63.8918, -1.92657 )
scale = Vector2( 0.215124, 0.215124 )
texture = ExtResource( 6 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2560.0
margin_bottom = 1440.0
rect_min_size = Vector2( 2560, 1440 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Comparte" type="RichTextLabel" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1164.52
margin_top = 233.691
margin_right = 561.477
margin_bottom = 331.691
mouse_filter = 2
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0.992157, 0.980392, 0.890196, 1 )
bbcode_enabled = true
bbcode_text = "[center]¡Evita tocar los virus o se multiplicarán![center]"
text = "¡Evita tocar los virus o se multiplicarán!"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="textos_ayuda" type="Control" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Noticias" type="RichTextLabel" parent="Control/textos_ayuda"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 1314.07
margin_top = 118.127
margin_right = 1622.07
margin_bottom = 216.127
mouse_filter = 2
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0.992157, 0.980392, 0.890196, 1 )
bbcode_enabled = true
bbcode_text = "[center]Noticias[center]"
text = "Noticias"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Noticia" type="RichTextLabel" parent="Control/textos_ayuda"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 1420.84
margin_top = 181.554
margin_right = 1749.84
margin_bottom = 279.554
mouse_filter = 2
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0.992157, 0.980392, 0.890196, 1 )
bbcode_enabled = true
bbcode_text = "[center]Virus[center]"
text = "Virus"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Randy" type="RichTextLabel" parent="Control/textos_ayuda"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 643.976
margin_top = 413.187
margin_right = 972.976
margin_bottom = 511.187
mouse_filter = 2
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0.992157, 0.980392, 0.890196, 1 )
bbcode_enabled = true
bbcode_text = "[center]Randy[center]"
text = "Randy"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Control/textos_ayuda"]

[node name="Timer_ayuda" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[node name="Tween" type="Tween" parent="."]

[node name="ClicBien" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[connection signal="area_entered" from="Randy/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer_ayuda" to="." method="_on_Timer_ayuda_timeout"]
